--- a/site/wp-content/themes/nexus/style.css
+++ b/site/wp-content/themes/nexus/style.css
@@ -62,99 +62,268 @@ table {
 
 /***end-reset***/
 
-
-/***header****/
-#header{
-width:821px;
-height:350px;
-margin:0px 0 0 -148px;
-padding:0px 139px;
-background:url(images/header_bg.png) no-repeat center top;
-/*position:relative;*/
-}
-/*div#circle{
-  background:url(images/circle.png) no-repeat transparent;
-  width:334px; height:334px;
-  position:absolute;
-  top:0; left:-135px;
-  z-index: 100
-}
-div#esquina{
-  background:url(images/esquina.png) no-repeat transparent;
-  width:301px; height:299px;
-  position:absolute;
-  top:1px; right:-97px;
-  z-index: 100
-}*/
-/*div#header div.logo{
- /* position:absolute;
-  top:0; left:0;
-  z-index: 1000
-}*/
-div#header div.description{
-  /*background:url(images/description.png) no-repeat transparent;*/
-  width:280px; height:28px;
-  margin:-5px 0 0 120px;
-  /*color:transparent;*/
- /* position:absolute;
-  top:100px; left:0;
-  z-index: 1000*/
-}
-/***end-header****/
-
-body
-{
-background:url(images/bg.gif) repeat #000000;
-padding:0;
-font: normal 62.5% arial, sans-serif;
-/*font-family:arial, sans-serif; font-size:12px;*/
-margin:0px auto auto auto;
-color:#36322b;
+body{
+  background:url(images/bg.gif) repeat #000000;
+  padding:0;
+  font: normal 62.5% arial, sans-serif;
+  margin:0px auto auto auto;
+  color:#36322b;
 }
 p{
-font-size: 1.2em;
-padding: 0px;
-text-align:justify;
-margin:  6px 0px;
-line-height:18px;
+  font-size: 1.2em;
+  padding: 0px;
+  text-align:justify;
+  margin:  6px 0px;
+  line-height:18px;
 }
 h1{
-font-size: 1.2em;
-font-weight:bold;
-color:#da5b23;
+  font-size: 1.2em;
+  font-weight:bold;
+  color:#da5b23;
+}
+h2{
+  color:#e77817;
+  margin:0 0 10px 25px;
+  font-size:2.2em
+}
+h3{
+  width: auto;
+  padding:2px 0 10px 0;
+  font-size:1.7em;
+  color:#2e2721;
+  font-weight:bold;
+}
+a{
+  text-decoration: none;
+  color: #DA5B23;
+}
+  a:hover{
+    text-decoration: underline;
+    color:#800A2A;
+  }
+.clear{clear:both;}
+/*--------------header----------------*/
+#header{
+  width:821px;
+  height:323px;
+  margin:0px 0 0 -139px;
+  padding:0px 139px;
+  background:url(images/nexus-sprite.png) no-repeat 0 -202px;
+}
+div#header div.description{
+  width:280px; height:28px;
+  margin:-5px 0 0 120px;
 }
 
 /*-------------welcome_box------------*/
 .welcome_box{
-width:436px;
-height:148px;
-background:url(images/nexus-sprite.png) no-repeat left top;
-padding:25px 32px 29px 28px;
-position:relative;
+  width:436px;
+  height:148px;
+  background:url(images/nexus-sprite.png) no-repeat left top;
+  padding:25px 32px 29px 28px;
+  position:relative;
 }
 
 a.more{
-display:block;
-width:66px;
-height:23px;
-line-height:23px;
+  display:block;
+  width:66px;
+  height:23px;
+  line-height:23px;
+  text-align:center;
+  color:#fff;
+  padding:0 0 0 17px;
+  text-decoration:none;
+  background: transparent url(images/nexus-sprite.png) no-repeat -496px 0;
+  position:absolute;
+  bottom: 30px; right:32px;
+}
+  a:hover.more{background-position: -579px 0;}
+  a:active.more{bottom:29px;}
+
+
+
+.features{
+padding:20px 0 0 30px;
+}
+/*----------------------list-------------------------*/
+ol.list{ list-style: none }
+ol.list li{
+  font-size: 1.4em;
+
+  width: auto;height: auto;
+  margin:8px 0 8px 0;
+}
+ol.list li a{
+  background: transparent url(images/nexus-sprite.png) no-repeat -496px -23px;
+  display:block;
+  height:26px; width: auto;
+  padding:0 0 0 10px; margin:0;color:#36322b;text-align:left;line-height:24px;
+  text-decoration:none;
+}
+  ol.list li a:hover{
+    background-position: -496px -50px;
+    text-decoration:underline;}
+.testimonials{
+  padding:20px 0 20px 0;
+}
+/*------------------News---------------*/
+
+.news_box{
+float:left;
+width:auto;
+border-bottom:1px #CCCCCC dashed;
+padding:10px 0 8px 0;
+}
+.news_icon{
+width:30px;
+height:33px;
+float:left;
+/*background: transparent url(images/nexus-sprite.png) no-repeat -496px -76px;*/
+}
+.news_content{
+width:400px;
+float:left;
+text-align:justify;
+line-height:20px;
+padding:0 0 0 10px;
+}
+
+.news_content h1 a{
+  color: inherit
+}
+.news_content h1 a{
+  color: inherit
+}
+.news_content p{
+  font-size: 1em;
+}
+
+/*---fecha---*/
+
+.date{
+  float:right;
+  margin: 0 20px;
+}
+.published {
+	display:block;
+	text-align: center;
+	float:left;
+	font-family: Arial, Helvetica, sans-serif;
+	border-bottom:none;
+	background: transparent url(images/clip-bottom.png) right 12px no-repeat;
+	width:3em;
+}
+.pub-month {
+	display:block;
+	font-size: .9em;
+	margin:0;
+	padding:0;
+	padding-top:12px;
+	background: transparent url(images/clip-top.png) repeat-x top center ;
+}
+.pub-date {
+	display:block;
+	font-size:1.4em;
+  font-weight: bold;
+	margin:0;
+	padding:0;
+}
+/*-----------sidebar----------*/
+#sidebar{
+width:300px;
+float:left;
+padding:0 0 10px 0px;
+}
+#sidebar ul{}
+
+#sidebar ul li{
+width:288px;
+height:145px;
+margin: 5px 0;
+padding: 15px 8px;
+background: transparent url(images/nexus-sprite.png) no-repeat 0px -525px;
+}
+#sidebar ul li.widget_text{
+background:#E77817 none repeat scroll 0 0;
+font-size:22px;
+font-weight:bold;
+height:auto;
+margin:15px;
+padding:15px 10px;
 text-align:center;
-color:#fff;
-padding:0 0 0 17px;
-text-decoration:none;
-background: transparent url(images/nexus-sprite.png) no-repeat -496px 0;
-position:absolute;
-bottom: 30px; right:32px;
+width:255px;
 }
-a:hover.more{
-background-position: -579px 0;
-
+#sidebar ul li.widget_text span{
+  font-size: 17px;
 }
-a:active.more{
-  bottom:29px;
+#sidebar ul li h2{
+margin: 2px 0px 0px;
+width: auto;
+padding:0 0 0 20px;
+font-size: 1.7em;
+line-height: 28px;
+color:#E77817;
+background-color:#605D5C;
+font-weight:bold;
+}
+/*#sidebar ul li div div{
+  margin: 4px 0 0 18px;
+  padding: 0;
+}
+#sidebar ul li#calendario-de-eventos{
+width:auto;
+height:auto;
+padding: 0;
+background: none;
+background-position:0px 0px;
+list-style: none;
+margin:7px 0px 30px 20px;
+}
+#sidebar ul li#calendario-de-eventos h2{
+ margin: 7px 0 7px 5px;
+}*/
+#sidebar ul li ul li{
+float:left;
+width:120px;
+height:auto;
+padding: 0 0 0 10px;
+background: none;
+background-position:0px 0px;
+list-style: none;
+margin: 7px;
+}
+#sidebar ul li ul li a{
+   text-decoration: none;
+   color: #000;
+   padding: 0 0 0 20px;
+   line-height: 15px;
+   font-size: 1.2em;
+   background: url(images/bullet_list_v.png) no-repeat left top;
+   border-bottom:0 none;
+}
+#sidebar ul li ul li a:hover{
+   color: #605d5c;
+   background: url(images/bullet_list_h.png) no-repeat left top;
+   border-bottom:0 none;
 }
 
 
+/*-------------------paginas-----------------*/
+
+.entry, .navigation, #respond{
+  padding: 0 20px 20px 25px;
+}
+
+
+
+
+/*#sidebar ul li ul li ul li{
+   padding:0;
+   margin: 0;
+}/*
+
+
+/*************************************
 p.welcome{
 padding:30px 35px 0 35px;
 margin:0;
@@ -162,20 +331,12 @@ margin:0;
 p.testimonial{
 font-style:italic;
 padding:5px 15px 0 5px;
-}
-h2{
-  color:#e77817;
-  margin:0 0 10px 25px;
-  font-size:22px;
-}
+}*/
 
 
-.clear{
-clear:both;
-}
-a{
-text-decoration:underline;
-}
+
+
+
 
 
 img.left_img{
@@ -194,11 +355,7 @@ padding:0px;
 padding:20px 0 0 0px;
 }
 .title{
-width: auto;
-padding:2px 0 10px 0;
-font-size:17px;
-color:#2e2721;
-font-weight:bold;
+
 }
 .title_welcome{
 width: auto;
@@ -218,7 +375,7 @@ color:#da5b23;
 .menu{
 width:821px;
 height:42px;
-margin:-215px 0 0 0px;
+margin:-189px 0 0 0px;
 background:url(images/menu_bg.gif) no-repeat left;
 }
 .menu ul{
@@ -268,11 +425,7 @@ width:500px;
 float:left;
 padding:10px 0 10px 10px;
 }
-.center_right{
-width:300px;
-float:left;
-padding:0 0 10px 0px;
-}
+
 .center_widecolumn{
 width:auto;
 float:left;
@@ -283,107 +436,9 @@ width:187px;
 height:265px;
 padding:0 0 15px 50px;
 }
-.features{
-padding:10px 0 0 30px;
-}
-.news_box{
-float:left;
-width:auto;
-border-bottom:1px #CCCCCC dashed;
-padding:10px 0 8px 0;
-}
-.news_icon{
-width:30px;
-height:33px;
-float:left;
-background:url(images/news_icon.gif) no-repeat center;
-}
-.news_content{
-width:400px;
-float:left;
-text-align:justify;
-line-height:20px;
-padding:0 0 0 10px;
-}
+
 /*-----------------------login_form-------------------*/
-#sidebar ul{
-  padding:0;
-  list-style: none;
-}
-#sidebar ul li{
-width:288px;
-height:145px;
-margin: 5px 0;
-padding: 15px 8px;
-background:url(images/text_box.png) no-repeat center;
-background-position:0px 0px;
-list-style: none;
-}
-#sidebar ul li.widget_text{
-background:#E77817 none repeat scroll 0 0;
-font-size:22px;
-font-weight:bold;
-height:auto;
-margin:15px;
-padding:15px 10px;
-text-align:center;
-width:255px;
-}
-#sidebar ul li.widget_text span{
-  font-size: 17px;
-}
-#sidebar ul li h2{
-margin: 2px 0 0px 0px;
-width: auto;
-padding:2px 0 5px 20px;
-font-size:17px;
-color:#E77817;
-background-color:#605D5C;
-font-weight:bold;
-}
-#sidebar ul li div div{
-  margin: 4px 0 0 18px;
-  padding: 0;
-}
-#sidebar ul li#calendario-de-eventos{
-width:auto;
-height:auto;
-padding: 0;
-background: none;
-background-position:0px 0px;
-list-style: none;
-margin:7px 0px 30px 20px;
-}
-#sidebar ul li#calendario-de-eventos h2{
- margin: 7px 0 7px 5px;
-}
-#sidebar ul li ul li{
-float:left;
-width:120px;
-height:auto;
-padding: 0 0 0 10px;
-background: none;
-background-position:0px 0px;
-list-style: none;
-margin: 7px;
-}
-#sidebar ul li ul li a{
-   text-decoration: none;
-   color: #000;
-   padding: 0 0 0 20px;
-   line-height: 17px;
-   background: url(images/bullet_list_v.png) no-repeat left top;
-   border-bottom:0 none;
-}
-#sidebar ul li ul li a:hover{
-   color: #605d5c;
-   background: url(images/bullet_list_h.png) no-repeat left top;
-   border-bottom:0 none;
-}
-#sidebar ul li ul li ul li{
-   padding:0;
-   margin: 0;
-}
+
 .login_form_row{
 float:left;
 padding:4px 0 4px 0;
@@ -406,27 +461,6 @@ color: #000;
 input.login{
 float:right;
 padding:10px 20px 0 0;
-}
-/*----------------------list-------------------------*/
-ul.list{
-list-style:none;padding:0px;margin:0px; 
-}
-ul.list li{
-list-style:none;width: auto;height: auto;padding:0px; margin:8px 0 8px 0;
-}
-ul.list li a{
-height:24px; width: auto; padding:0 0 0 15px; margin:0;color:#36322b;text-align:left;line-height:24px;
-text-decoration:none;
-}
-ul.list li span{
-height:24px; width:24px; display:block;padding:0px; margin:0px;color:#000;text-align:center; float:left; float:left; line-height:24px;
-background:url(images/bullet_list.gif) no-repeat left;
-}
-ul.list li a:hover{
-text-decoration:underline;
-}
-.testimonials{
-padding:20px 0 20px 0;
 }
 /*-------------------footer------------------------*/
 #footer{
